--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,6 +35,7 @@
                 {% elif request.path != "/" %}
                     <li> <a href="/">Choose constituency</a> </li>
                 {% endif %}
+                <li> <a href="/archive">Archive</a> </li>
                 <li> <a href="/about">About</a> </li>
             {% endif %}
           </ul>
