Change YourNextMP to Democracy Club Candidates
Fixes #79

--- a/templates/upload_cv.html
+++ b/templates/upload_cv.html
@@ -39,7 +39,7 @@
                 </div>
             </form>
             {% else %}
-                <a href="https://yournextmp.com/person/{{candidate.id}}" class="btn btn-default btn-lg">Find {{ candidate.name }}'s email address</a>
+                <a href="https://candidates.democracyclub.org.uk/person/{{candidate.id}}" class="btn btn-default btn-lg">Tell us {{ candidate.name }}'s email address</a>
             {% endif %}
         </p>
 
