Better copy for archive. Only link from About.

--- a/templates/about.html
+++ b/templates/about.html
@@ -39,6 +39,14 @@
         site has more.
         </p>
 
+        <h2>What elections do you cover?</h2>
+
+        <p>Currently we're collecting CVs for the {{ g.current_election_name }}.
+        </p>
+
+        <p>We've covered other elections in the past, see <a href="/archive">our archive</a>.
+        </p>
+
         <h2>Who's behind this site?</h2>
 
         <p>The <a href="http://www.theguardian.com/politics/blog/2010/may/04/general-election-2010">original idea</a> was Julian Todd's.
@@ -75,5 +83,8 @@
 
     <h2>Source code</h2>
     <p class="lead"> <a href="https://github.com/frabcus/mpcv">frabcus/mpcv</a></p>
+
+    <h2>Archive</h2>
+    <p class="lead"> <a href="/archive">Previous elections</a></p>
 
 {% endblock  %}
