--- a/templates/archive.html
+++ b/templates/archive.html
@@ -6,22 +6,30 @@
 
         <h2>Archive of previous elections</h2>
 
-        <p>Archives contain HTML index pages, thumbnails images and the CV documents themselves. 
-        After downloading and unzipping them, browse here to start:
-        </p>
+        <p>This site covers one election at a time. For previous elections,
+        we offer archives of the CVs available on election day.
 
-        <p>
-        <tt>archive-XXXX/cv.democracyclub.org.uk/index.html</tt>
-        </p>
-
-        <p>Some styling, such as fonts, and inline viewing of CVs requires an
-        internet connection. Even without one though, you can download CVs,
-        or directly browse them in the archive files.
-        </p>
 
         <h3>General Election 2015</h3>
         
         Download archive: <a href="https://mpcv.s3.amazonaws.com:443/archive/democracy-club-cvs-archive-2015.zip">democracy-club-cvs-archive-2015.zip</a> 153Mb
+
+        <h2>Instructions</h2>
+
+        <p>Archives are zip files containing  HTML index pages, thumbnail
+        images and the CV documents themselves. 
+        </p>
+
+        <p>After downloading an archive, first unzip it. Then open
+        the index file which is here:</p>
+
+        <p>
+        <b>archive-XXXX/cv.democracyclub.org.uk/index.html</b>
+        </p>
+
+        <p>You need to be connected to the Internet to view the CVs using the
+        in-page viewer. You can however download them, or browse them as
+        files locally.</p>
 
     </div>
 {% endblock %}
