Add basic usage clause.
Fix #78

--- a/templates/upload_cv_confirmed.html
+++ b/templates/upload_cv_confirmed.html
@@ -19,6 +19,10 @@
           </a>
         </form>
 
+        <p>By uploading your CV, you are agreeing that Democracy Club and its partners can publish
+        it during the election, and as part of a historical archive after the election.
+        </p>
+
         {% include 'this_is_a_cv.html' %}
 
     </div>
