Rename "More candidates" as "More CVs"
As it is confusing when link comes from a central voter advice site.

Fixes #90 using method suggested in #69

--- a/templates/show_cv.html
+++ b/templates/show_cv.html
@@ -30,7 +30,7 @@
 
           <div class="pull-left">
              <span class="visible-lg-block visible-md-block hidden-sm hidden-xs">
-                <a href="{{ more_link }}" class="btn btn-success"><i class="glyphicon glyphicon-arrow-left"></i> More candidates</a>
+                <a href="{{ more_link }}" class="btn btn-success"><i class="glyphicon glyphicon-arrow-left"></i> More CVs</a>
              </span>
              <span class="hidden-lg hidden-md visible-sm-block hidden-xs">
                 <a href="{{ more_link }}" class="btn btn-success"><i class="glyphicon glyphicon-arrow-left"></i></a>
