--- a/templates/archive.html
+++ b/templates/archive.html
@@ -10,6 +10,11 @@
         we offer archives of the CVs available on election day.
 
 
+        <h3>General Election 2019</h3>
+
+        <p>Download archive: <a href="http://mpcv.s3.amazonaws.com/archive/democracy-club-cvs-archive-parl.2019-12-12.zip">democracy-club-cvs-archive-2019-12-12.zip</a> 92Mb
+        </p>
+
         <h3>General Election 2017</h3>
 
         <p>Download archive: <a href="http://mpcv.s3.amazonaws.com/archive/democracy-club-cvs-archive-parl.2017-06-08.zip">democracy-club-cvs-archive-2017-06-08.zip</a> 92Mb
